Added comments for SctiesMvmntTp and Pmt
Options for SctiesMvmntTp:
DELI, RECI

Options for Pmt:
FREE, APMT

--- a/LendingDeskAPIs/LendingDeskMXtoMT.yaml
+++ b/LendingDeskAPIs/LendingDeskMXtoMT.yaml
@@ -136,9 +136,11 @@ paths:
                         SctiesMvmntTp:
                           type: string
                           minLength: 1
+                          description: DELI or RECI
                         Pmt:
                           type: string
                           minLength: 1
+                          description: FREE or APMT
                     TradDtls:
                       type: object
                       required:
